[package]
name = "live2d-python"
version = "0.1.0"
authors = ["Daniel Conley <danielc030417@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
cubism = {git = "https://github.com/Veykril/cubism-rs.git"}
pyo3 = "0.10"
