[package]
name = "cubism"
version = "0.1.0"
authors = ["Daniel Conley <danielc030417@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "cubism"

[dependencies]
cubism = {git = "https://github.com/Veykril/cubism-rs.git", default-features = false}
pyo3 = {version = "0.9", features = ["extension-module"]}

[build-dependencies]
bindgen = "0.54.0"
